navbar and landing

--- a/index.html
+++ b/index.html
@@ -21,7 +21,57 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg sticky-top position-fixed w-100">
+        <div class="container">
+            <a class="navbar-brand" href="#"><img src="imgs/cropped-WEFASDFSDFA.png" alt=""></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main"
+                aria-controls="main" aria-expanded="false" aria-label="Toggle navigation">
+                <i class="fa-solid fa-bars"></i>
+            </button>
+            <div class="collapse navbar-collapse" id="main">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link p-lg-3 active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link p-lg-3" aria-current="page" href="#">Diploma schedule</a>
+                    </li>
 
+                    <li class="nav-item dropdown">
+                        <a class="nav-link p-lg-3 dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Subjects
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="#">MS500</a></li>
+                            <li><a class="dropdown-item" href="#">CS500</a></li>
+                            <li><a class="dropdown-item" href="#">OR500</a></li>
+                            <li><a class="dropdown-item" href="#">AS500</a></li>
+                            <li><a class="dropdown-item" href="#">DB500</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link p-lg-3" href="#">Groups Links</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Start Landing -->
+    <div class="landing d-flex justify-content-center align-items-center">
+        <div class="text-center">
+            <h1 class="text-white">CS Diploma Material</h1>
+            <h2 class="text-white">First Term</h2>
+            <p>Faculty of Graduate Studies for Statistical Research - Cairo University</p>
+
+        </div>
+    </div>
+    <!-- End Landing -->
 
     <!-- Bootstrap JS -->
     <script src="js/bootstrap.bundle.min.js"></script>
