--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <a class="nav-link p-lg-3 active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link p-lg-3" aria-current="page" href="#">Diploma schedule</a>
+                        <a class="nav-link p-lg-3" aria-current="page" href="#">Diploma Schedule</a>
                     </li>
 
                     <li class="nav-item dropdown">
@@ -44,18 +44,19 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="#">MS500</a></li>
+                            <hr class="dropdown-divider">
                             <li><a class="dropdown-item" href="#">CS500</a></li>
+                            <hr class="dropdown-divider">
                             <li><a class="dropdown-item" href="#">OR500</a></li>
+                            <hr class="dropdown-divider">
                             <li><a class="dropdown-item" href="#">AS500</a></li>
+                            <hr class="dropdown-divider">
                             <li><a class="dropdown-item" href="#">DB500</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link p-lg-3" href="#">Groups Links</a>
+                        <a class="nav-link p-lg-3" href="#">Important Links</a>
                     </li>
                 </ul>
             </div>
@@ -63,12 +64,16 @@
     </nav>
 
     <!-- Start Landing -->
-    <div class="landing d-flex justify-content-center align-items-center">
-        <div class="text-center">
-            <h1 class="text-white">CS Diploma Material</h1>
-            <h2 class="text-white">First Term</h2>
-            <p>Faculty of Graduate Studies for Statistical Research - Cairo University</p>
+    <div class="landing " id="particles-js">
+        <div class="overlay">
+            <div class="landing-content">
+                <div class="text-center">
+                    <h1 class="text-white">CS Diploma Material</h1>
+                    <h2 class="text-white">First Term</h2>
+                    <p>Faculty of Graduate Studies for Statistical Research - Cairo University</p>
 
+                </div>
+            </div>
         </div>
     </div>
     <!-- End Landing -->
@@ -77,6 +82,9 @@
     <script src="js/bootstrap.bundle.min.js"></script>
     <!-- Font Awesome  -->
     <script src="js/all.min.js"></script>
+    <!-- Particles  -->
+    <script src="js/particles/particles.js"></script>
+    <script src="js/particles/app.js"></script>
     <!-- JS File  -->
     <script src="js/main.js"></script>
 </body>
