diploma schedule section

--- a/index.html
+++ b/index.html
@@ -33,9 +33,6 @@
                     <li class="nav-item">
                         <a class="nav-link p-lg-3 active" aria-current="page" href="#">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link p-lg-3" aria-current="page" href="#">Diploma Schedule</a>
-                    </li>
 
                     <li class="nav-item dropdown">
                         <a class="nav-link p-lg-3 dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -55,6 +52,10 @@
 
                         </ul>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link p-lg-3" aria-current="page" href="#diploma_schedule">Diploma Schedule</a>
+                    </li>
+
                     <li class="nav-item">
                         <a class="nav-link p-lg-3" href="#">Important Links</a>
                     </li>
@@ -77,6 +78,53 @@
         </div>
     </div>
     <!-- End Landing -->
+
+    <!-- Start Diploma Schedule -->
+    <section class="py-5 text-center" id="diploma_schedule">
+        <h2 class="section-title">Diploma Schedule</h2>
+        <div class="container pt-5">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th scope="col">من 7 الي 10</th>
+                        <th scope="col">من 4 الي 7</th>
+                        <th scope="col">اليوم</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr class="table-primary">
+                        <td>MS500</td>
+                        <td>----</td>
+                        <th scope="row">الأحد</th>
+                    </tr>
+                    <tr class="table-success">
+                        <td>DB500</td>
+                        <td>AS500</td>
+                        <th scope="row">الأثنين</th>
+                    </tr>
+
+
+                    <tr class="table-secondary">
+                        <td>---</td>
+                        <td>---</td>
+                        <th scope="row">الثلاثاء</th>
+                    </tr>
+                    <tr class="table-danger">
+                        <td>CS500 Section</td>
+                        <td>OR500</td>
+                        <th scope="row">الأربعاء</th>
+                    </tr>
+                    <tr class="table-warning">
+                        <td>CS500</td>
+                        <td>---</td>
+                        <th scope="row">الخميس</th>
+                    </tr>
+
+                </tbody>
+            </table>
+        </div>
+    </section>
+    <!-- End Diploma Schedule -->
 
     <!-- Bootstrap JS -->
     <script src="js/bootstrap.bundle.min.js"></script>
