--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
     <nav class="navbar navbar-expand-lg sticky-top position-fixed w-100">
         <div class="container">
-            <a class="navbar-brand" href="#"><img src="imgs/cropped-WEFASDFSDFA.png" alt=""></a>
+            <a class="navbar-brand" href="#"><img src="imgs/FGSSR-LOGO.png" alt=""><span class="ps-2"> FGSSR</span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main"
                 aria-controls="main" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fa-solid fa-bars"></i>
@@ -83,45 +83,48 @@
     <section class="py-5 text-center" id="diploma_schedule">
         <h2 class="section-title">Diploma Schedule</h2>
         <div class="container pt-5">
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th scope="col">من 7 الي 10</th>
-                        <th scope="col">من 4 الي 7</th>
-                        <th scope="col">اليوم</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr class="table-primary">
-                        <td>MS500</td>
-                        <td>----</td>
-                        <th scope="row">الأحد</th>
-                    </tr>
-                    <tr class="table-success">
-                        <td>DB500</td>
-                        <td>AS500</td>
-                        <th scope="row">الأثنين</th>
-                    </tr>
+            <div class="table-responsive">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th scope="col">من 7 الي 10</th>
+                            <th scope="col">من 4 الي 7</th>
+                            <th scope="col">اليوم</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr class="table-primary">
+                            <td>MS500</td>
+                            <td>----</td>
+                            <th scope="row">الأحد</th>
+                        </tr>
+                        <tr class="table-success">
+                            <td>DB500</td>
+                            <td>AS500</td>
+                            <th scope="row">الأثنين</th>
+                        </tr>
 
 
-                    <tr class="table-secondary">
-                        <td>---</td>
-                        <td>---</td>
-                        <th scope="row">الثلاثاء</th>
-                    </tr>
-                    <tr class="table-danger">
-                        <td>CS500 Section</td>
-                        <td>OR500</td>
-                        <th scope="row">الأربعاء</th>
-                    </tr>
-                    <tr class="table-warning">
-                        <td>CS500</td>
-                        <td>---</td>
-                        <th scope="row">الخميس</th>
-                    </tr>
+                        <tr class="table-secondary">
+                            <td>---</td>
+                            <td>---</td>
+                            <th scope="row">الثلاثاء</th>
+                        </tr>
+                        <tr class="table-danger">
+                            <td>CS500 Section</td>
+                            <td>OR500</td>
+                            <th scope="row">الأربعاء</th>
+                        </tr>
+                        <tr class="table-warning">
+                            <td>CS500</td>
+                            <td>---</td>
+                            <th scope="row">الخميس</th>
+                        </tr>
 
-                </tbody>
-            </table>
+                    </tbody>
+                </table>
+            </div>
+
         </div>
     </section>
     <!-- End Diploma Schedule -->
