--- a/subjects/ms500/lectures/msLec6.html
+++ b/subjects/ms500/lectures/msLec6.html
@@ -12,13 +12,13 @@
         href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Roboto:wght@100;300;400;500;700;900&display=swap"
         rel="stylesheet">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="../../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../../css/bootstrap.min.css">
     <!-- Font Awesome  -->
-    <link rel="stylesheet" href="../../css/all.min.css">
+    <link rel="stylesheet" href="../../../css/all.min.css">
     <!-- CSS File  -->
-    <link rel="stylesheet" href="msStyle.css">
-    <link rel="stylesheet" href="../../css/style.css">
-    <title>FGSSR - MS500</title>
+
+    <link rel="stylesheet" href="../../../css/style.css">
+    <title>FGSSR - MS500 - Lecture 6</title>
 </head>
 
 
@@ -27,7 +27,7 @@
     <nav class="navbar navbar-expand-lg sticky-top position-fixed w-100">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="../../imgs/FGSSR-LOGO.png" alt="">
+                <img src="../../../imgs/FGSSR-LOGO.png" alt="">
                 <span class="ps-2">FGSSR</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main"
@@ -37,7 +37,7 @@
             <div class="collapse navbar-collapse" id="main">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link p-lg-3 active" aria-current="page" href="../../index.html">Home</a>
+                        <a class="nav-link p-lg-3 active" aria-current="page" href="../../../index.html">Home</a>
                     </li>
 
                     <li class="nav-item dropdown">
@@ -46,7 +46,7 @@
                             Subjects
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">MS500</a></li>
+                            <li><a class="dropdown-item" href="../ms500.html">MS500</a></li>
                             <hr class="dropdown-divider">
                             <li><a class="dropdown-item" href="#">CS500</a></li>
                             <hr class="dropdown-divider">
@@ -59,7 +59,8 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link p-lg-3" aria-current="page" href="#diploma_schedule">Diploma Schedule</a>
+                        <a class="nav-link p-lg-3" aria-current="page" href="../../index.html#diploma_schedule">Diploma
+                            Schedule</a>
                     </li>
 
                     <li class="nav-item">
@@ -70,51 +71,27 @@
         </div>
     </nav>
 
-    <section class="subjects-body">
+    <section class="lecture-body">
         <div class="text-center">
             <div class="section-header">
                 <h2 class="section-title">Mathematical Methods</h2>
-                <h3 class="section-desc">Dr's Lectures</h3>
+                <h3 class="section-desc">Lectures 6</h3>
             </div>
 
             <div class="container">
                 <div class="ms500-content pt-4">
-
-                    <div class="row mt-3">
-                        <div class="col-sm-12 col-lg-6">
-                            <a href="lectures/msLec1.html">
-                                <button type="button" class="btn w-100 py-3">Lecture 1</button>
-                            </a>
-                        </div>
-                        <div class="col-sm-12 col-lg-6">
-                            <a href="lectures/msLec2.html">
-                                <button type="button" class="btn w-100 py-3">Lecture 2</button>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="row mt-3">
-                        <div class="col-sm-12 col-lg-6">
-                            <a href="lectures/msLec3.html">
-                                <button type="button" class="btn w-100 py-3">Lecture 3</button>
-                            </a>
-                        </div>
-                        <div class="col-sm-12 col-lg-6">
-                            <a href="lectures/msLec4.html">
-                                <button type="button" class="btn w-100 py-3">Lecture 4</button>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="row mt-3">
-                        <div class="col-sm-12 col-lg-6">
-                            <a href="lectures/msLec5.html">
-                                <button type="button" class="btn w-100 py-3">Lecture 5</button>
-                            </a>
-                        </div>
-                        <div class="col-sm-12 col-lg-6">
-                            <a href="lectures/msLec6.html">
-                                <button type="button" class="btn w-100 py-3">Lecture 6</button>
-                            </a>
-                        </div>
+                    <h2>PDF</h2>
+                    <a href="https://drive.google.com/file/d/1y2E_I4frlxngLSzM6d9D5D-6eN9gZAXd/view?usp=sharing"
+                        target="_blank">
+                        <button type="button" class="btn btn-danger w-25">
+                            Lecture 6 PDF
+                            <i class="fa-solid fa-arrow-down-long fa-bounce"></i>
+                        </button>
+                    </a>
+                    <div class="row my-5">
+                        <h2>Video</h2>
+                        <iframe src="https://drive.google.com/file/d/1fuVCwcYmnJIUjLfNLCXUnY7w3KJbuKiB/preview"
+                            width="640" height="480" allow="autoplay" allowfullscreen></iframe>
                     </div>
 
 
@@ -127,12 +104,12 @@
     </section>
 
     <!-- Bootstrap JS -->
-    <script src="../../js/bootstrap.bundle.min.js"></script>
+    <script src="../../../js/bootstrap.bundle.min.js"></script>
     <!-- Font Awesome  -->
-    <script src="../../js/all.min.js"></script>
+    <script src="../../../js/all.min.js"></script>
 
     <!-- JS File  -->
-    <script src="../../js/main.js"></script>
+    <script src="../../../js/main.js"></script>
 </body>
 
 </html>
