init cs500 files

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="subjects/ms500/ms500.html">MS500</a></li>
                             <hr class="dropdown-divider">
-                            <li><a class="dropdown-item" href="#">CS500</a></li>
+                            <li><a class="dropdown-item" href="subjects/cs500/cs500.html">CS500</a></li>
                             <hr class="dropdown-divider">
                             <li><a class="dropdown-item" href="#">OR500</a></li>
                             <hr class="dropdown-divider">
