--- a/subjects/cs500/cs500.html
+++ b/subjects/cs500/cs500.html
@@ -18,7 +18,7 @@
     <!-- CSS File  -->
     <link rel="stylesheet" href="msStyle.css">
     <link rel="stylesheet" href="../../css/style.css">
-    <title>FGSSR - MS500</title>
+    <title>FGSSR - CS500</title>
 </head>
 
 
@@ -46,9 +46,9 @@
                             Subjects
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">MS500</a></li>
+                            <li><a class="dropdown-item" href="../ms500/ms500.html">MS500</a></li>
                             <hr class="dropdown-divider">
-                            <li><a class="dropdown-item" href="../cs500/cs500.html">CS500</a></li>
+                            <li><a class="dropdown-item" href="#">CS500</a></li>
                             <hr class="dropdown-divider">
                             <li><a class="dropdown-item" href="#">OR500</a></li>
                             <hr class="dropdown-divider">
@@ -73,7 +73,7 @@
     <section class="subjects-body">
         <div class="text-center">
             <div class="section-header">
-                <h2 class="section-title">Mathematical Methods</h2>
+                <h2 class="section-title">Computer Science</h2>
                 <h3 class="section-desc">Dr's Lectures</h3>
             </div>
 
@@ -82,36 +82,36 @@
 
                     <div class="row">
                         <div class="col-sm-12 col-lg-6">
-                            <a href="lectures/msLec1.html">
+                            <a href="lectures/">
                                 <button type="button" class="btn w-100 py-3 mt-3">Lecture 1</button>
                             </a>
                         </div>
                         <div class="col-sm-12 col-lg-6">
-                            <a href="lectures/msLec2.html">
+                            <a href="lectures">
                                 <button type="button" class="btn w-100 py-3 mt-3">Lecture 2</button>
                             </a>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row ">
                         <div class="col-sm-12 col-lg-6">
-                            <a href="lectures/msLec3.html">
+                            <a href="lecture">
                                 <button type="button" class="btn w-100 py-3 mt-3">Lecture 3</button>
                             </a>
                         </div>
                         <div class="col-sm-12 col-lg-6">
-                            <a href="lectures/msLec4.html">
+                            <a href="lecture">
                                 <button type="button" class="btn w-100 py-3 mt-3">Lecture 4</button>
                             </a>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-sm-12 col-lg-6">
-                            <a href="lectures/msLec5.html">
+                            <a href="lecture">
                                 <button type="button" class="btn w-100 py-3 mt-3">Lecture 5</button>
                             </a>
                         </div>
                         <div class="col-sm-12 col-lg-6">
-                            <a href="lectures/msLec6.html">
+                            <a href="lecture">
                                 <button type="button" class="btn w-100 py-3 mt-3">Lecture 6</button>
                             </a>
                         </div>
