edit download btn in ms

--- a/subjects/ms500/lectures/msLec1.html
+++ b/subjects/ms500/lectures/msLec1.html
@@ -80,17 +80,26 @@
 
             <div class="container">
                 <div class="ms500-content pt-4">
-                    <h2>PDF</h2>
-                    <a href="https://drive.google.com/file/d/1ZwP3WswI45JqnyK3H267xKCjNdiFSU16/view" target="_blank">
-                        <button type="button" class="btn btn-danger w-25">
-                            Lecture1 PDF
-                            <i class="fa-solid fa-arrow-down-long fa-bounce"></i>
-                        </button>
-                    </a>
+
+                    <div>
+                        <h2>PDF</h2>
+                        <a href="https://drive.google.com/file/d/1ZwP3WswI45JqnyK3H267xKCjNdiFSU16/view"
+                            target="_blank">
+                            <button type="button" class="btn btn-danger py-3">
+                                Lecture1 PDF
+                                <i class="fa-solid fa-arrow-down-long fa-bounce"></i>
+                            </button>
+                        </a>
+                    </div>
+
+
+
                     <div class="row my-5">
                         <h2>Video</h2>
                         <iframe src="https://drive.google.com/file/d/1ruq00arBdUmbqRP98IhKJFDjn93tPOFD/preview"
                             width="740" height="480" allow="autoplay" allowfullscreen></iframe>
+
+
                     </div>
 
 
