--- a/subjects/ms500/lectures/msLec5.html
+++ b/subjects/ms500/lectures/msLec5.html
@@ -83,7 +83,7 @@
                     <h2>PDF</h2>
                     <a href="https://drive.google.com/file/d/1eGtukq7Zu6OL4WbJe0YmcRIk3QTASnxL/view?usp=sharing"
                         target="_blank">
-                        <button type="button" class="btn btn-danger w-25">
+                        <button type="button" class="btn btn-danger py-3">
                             Lecture 5 PDF
                             <i class="fa-solid fa-arrow-down-long fa-bounce"></i>
                         </button>
