--- a/subjects/ms500/lectures/msLec6.html
+++ b/subjects/ms500/lectures/msLec6.html
@@ -83,7 +83,7 @@
                     <h2>PDF</h2>
                     <a href="https://drive.google.com/file/d/1y2E_I4frlxngLSzM6d9D5D-6eN9gZAXd/view?usp=sharing"
                         target="_blank">
-                        <button type="button" class="btn btn-danger w-25">
+                        <button type="button" class="btn btn-danger py-3">
                             Lecture 6 PDF
                             <i class="fa-solid fa-arrow-down-long fa-bounce"></i>
                         </button>
