--- a/subjects/ms500/lectures/msLec2.html
+++ b/subjects/ms500/lectures/msLec2.html
@@ -84,7 +84,7 @@
                     <h2>PDF</h2>
                     <a href="https://drive.google.com/file/d/1YYf_iEa6mxwIKPSRONsjENGy0IvBej5M/view?usp=sharing"
                         target="_blank">
-                        <button type="button" class="btn btn-danger w-25">
+                        <button type="button" class="btn btn-danger py-3">
                             Lecture2 PDF
                             <i class="fa-solid fa-arrow-down-long fa-bounce"></i>
                         </button>
