--- a/subjects/ms500/lectures/msLec3.html
+++ b/subjects/ms500/lectures/msLec3.html
@@ -83,7 +83,7 @@
                     <h2>PDF</h2>
                     <a href="https://drive.google.com/file/d/1Gl0s2_X4sAoa9nEJlRwO_5zWY_9Qg1wl/view?usp=sharing"
                         target="_blank">
-                        <button type="button" class="btn btn-danger w-25">
+                        <button type="button" class="btn btn-danger py-3">
                             Lecture3 PDF
                             <i class="fa-solid fa-arrow-down-long fa-bounce"></i>
                         </button>
