--- a/subjects/ms500/lectures/msLec4.html
+++ b/subjects/ms500/lectures/msLec4.html
@@ -83,7 +83,7 @@
                     <h2>PDF</h2>
                     <a href="https://drive.google.com/file/d/11Tr0lVweDt2chGRF5i_xoCVsQbOwx8CR/view?usp=sharing"
                         target="_blank">
-                        <button type="button" class="btn btn-danger w-25">
+                        <button type="button" class="btn btn-danger py-3">
                             Lecture4 PDF
                             <i class="fa-solid fa-arrow-down-long fa-bounce"></i>
                         </button>
