--- a/subjects/ms500/ms500.html
+++ b/subjects/ms500/ms500.html
@@ -74,7 +74,7 @@
         <div class="text-center">
             <div class="section-header">
                 <h2 class="section-title">Mathematical Methods</h2>
-                <h3 class="section-desc">Dr's Lectures</h3>
+                <h3 class="section-desc">Dr. Abdel-hadi</h3>
             </div>
 
             <div class="container">
