--- a/subjects/ms500/lectures/msLec1.html
+++ b/subjects/ms500/lectures/msLec1.html
@@ -75,7 +75,7 @@
         <div class="text-center">
             <div class="section-header">
                 <h2 class="section-title">Mathematical Methods</h2>
-                <h3 class="section-desc">Lectures 1</h3>
+                <h3 class="section-desc">Lecture 1</h3>
             </div>
 
             <div class="container">
