--- a/subjects/ms500/lectures/msLec2.html
+++ b/subjects/ms500/lectures/msLec2.html
@@ -76,7 +76,7 @@
         <div class="text-center">
             <div class="section-header">
                 <h2 class="section-title">Mathematical Methods</h2>
-                <h3 class="section-desc">Lectures 2</h3>
+                <h3 class="section-desc">Lecture 2</h3>
             </div>
 
             <div class="container">
