cs500 lectures content

--- a/subjects/cs500/lectures/csLec5.html
+++ b/subjects/cs500/lectures/csLec5.html
@@ -74,14 +74,14 @@
     <section class="lecture-body">
         <div class="text-center">
             <div class="section-header">
-                <h2 class="section-title">Mathematical Methods</h2>
+                <h2 class="section-title">Computer Science</h2>
                 <h3 class="section-desc">Lecture 5</h3>
             </div>
 
             <div class="container">
                 <div class="cs500-content pt-4">
                     <h2>PDF</h2>
-                    <a href="https://drive.google.com/file/d/1eGtukq7Zu6OL4WbJe0YmcRIk3QTASnxL/view?usp=sharing"
+                    <a href="https://drive.google.com/file/d/1IQcTPE00gSURZEQh2NDf0EkYEGY-X0NV/view?usp=sharing"
                         target="_blank">
                         <button type="button" class="btn btn-danger py-3">
                             Lecture 5 PDF
@@ -90,7 +90,7 @@
                     </a>
                     <div class="row my-5">
                         <h2>Video</h2>
-                        <iframe src="https://drive.google.com/file/d/1MBRAmqdhN9iGPD8tnZqRTUVsf7Y2cEWr/preview"
+                        <iframe src="https://drive.google.com/file/d/1VSZeL3P6JsaN_xvwyOm14r8lkyWKbOjV/preview"
                             width="640" height="480" allow="autoplay" allowfullscreen></iframe>
                     </div>
 
