cs500 sections starter files

--- a/subjects/cs500/cs500.html
+++ b/subjects/cs500/cs500.html
@@ -71,14 +71,14 @@
     </nav>
 
     <section class="subjects-body">
-        <div class="text-center">
-            <div class="section-header">
-                <h2 class="section-title">Computer Science</h2>
-                <h3 class="section-desc">Dr Zeinab Lectures</h3>
-            </div>
+        <div class="container">
+            <div class="text-center">
+                <div class="section-header">
+                    <h2 class="section-title">Computer Science</h2>
+                    <h3 class="section-desc">Dr Zeinab Lectures</h3>
+                </div>
 
-            <div class="container">
-                <div class="cs500-content pt-4">
+                <div class="cs500-content my-5">
 
                     <div class="row">
                         <div class="col-sm-12 col-lg-6">
@@ -117,6 +117,87 @@
                         </div>
                     </div>
 
+
+
+
+
+                </div>
+                <!-- =========================Sections=================================== -->
+                <div class="section-header">
+                    <h3 class="section-desc">Dr Maryam Sections</h3>
+                </div>
+
+                <div class="cs500-content_sections my-5">
+                    <div class="row">
+                        <a href="https://www.youtube.com/playlist?list=PL4-CdaRLyja6ErUwwvHldyZ1lrd-wMB_g" target="_blank">
+                            <button type="button" class="btn  w-100 py-3 mt-3 all_sections-btn">
+                                All Sections
+                                <br>
+                                2021/2022
+                            </button>
+                        </a>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-12 col-lg-6">
+                            <a href="sections/csSec1.html">
+                                <button type="button" class="btn w-100 py-3 mt-3">
+                                    Section 1
+                                    <br>
+                                    Number Systems
+                                </button>
+                            </a>
+                        </div>
+                        <div class="col-sm-12 col-lg-6">
+                            <a href="sections/csSec2.html">
+                                <button type="button" class="btn w-100 py-3 mt-3">
+                                    Section 2
+                                    <br>
+                                    Number Systems P2 & Addition & Subtraction
+                                </button>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="row ">
+                        <div class="col-sm-12 col-lg-6">
+                            <a href="sections/csSec3.html">
+                                <button type="button" class="btn w-100 py-3 mt-3">
+                                    Section 3
+                                    <br>
+                                    Signed Binary Numbers
+                                </button>
+                            </a>
+                        </div>
+                        <div class="col-sm-12 col-lg-6">
+                            <a href="sections/csSec4.html">
+                                <button type="button" class="btn w-100 py-3 mt-3">
+                                    Section 4
+                                    <br>
+                                    Signed Binary Numbers P2 & Excess Notation
+                                </button>
+                            </a>
+                        </div>
+                    </div>
+                    <!-- <div class="row">
+                        <div class="col-sm-12 col-lg-6">
+                            <a href="sections/csSec5.html">
+                                <button type="button" class="btn w-100 py-3 mt-3">
+                                    Section 1
+                                    <br>
+
+                                </button>
+                            </a>
+                        </div>
+                        <div class="col-sm-12 col-lg-6">
+                            <a href="sections/csSec6.html">
+                                <button type="button" class="btn w-100 py-3 mt-3">
+                                    Section 1
+                                    <br>
+
+                                </button>
+                            </a>
+                        </div>
+                    </div>
+ -->
 
 
 
