cs500 section 1 - 2 - 3 - 4 content

--- a/subjects/cs500/sections/csSec1.html
+++ b/subjects/cs500/sections/csSec1.html
@@ -59,7 +59,8 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link p-lg-3" aria-current="page" href="../../index.html#diploma_schedule">Diploma
+                        <a class="nav-link p-lg-3" aria-current="page"
+                            href="../../../index.html#diploma_schedule">Diploma
                             Schedule</a>
                     </li>
 
@@ -83,10 +84,17 @@
 
                     <div>
                         <h2>PDF</h2>
-                        <a href=""
+                        <a href="https://drive.google.com/file/d/1Lqb8GRqls0eW5yY7xwdfenwgSvTkvaqa/view?usp=share_link"
                             target="_blank">
                             <button type="button" class="btn btn-danger py-3">
-                                Lecture1 PDF
+                                Section 1 PDF
+                                <i class="fa-solid fa-arrow-down-long fa-bounce"></i>
+                            </button>
+                        </a>
+                        <a href="https://drive.google.com/file/d/1w-4Hz65_PKKT6EOxIt-RY2WB5NTrP4jK/view?usp=share_link"
+                            target="_blank">
+                            <button type="button" class="btn btn-danger py-3 m-3">
+                                Section 1 Handwritten
                                 <i class="fa-solid fa-arrow-down-long fa-bounce"></i>
                             </button>
                         </a>
@@ -95,10 +103,24 @@
                     <div class="row my-5">
                         <h2>Video</h2>
 
-
-
-
-
+                        <h1 class="mt-5">
+                            <i class="fa-solid fa-angles-right"></i>Part 1<i class="fa-solid fa-angles-left"></i>
+                        </h1>
+                        <iframe width="1349" height="480"
+                            src="https://www.youtube.com/embed/pxRDOB4C07c?list=PL4-CdaRLyja6ErUwwvHldyZ1lrd-wMB_g"
+                            title="(CS500) Sec1_Number Systems 4-11-2021_part1" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen>
+                        </iframe>
+                        <!-- ================================================= -->
+                        <h1 class="mt-5">
+                            <i class="fa-solid fa-angles-right"></i>Part 2<i class="fa-solid fa-angles-left"></i>
+                        </h1>
+                        <iframe width="1349" height="480"
+                            src="https://www.youtube.com/embed/XX9ul1ClA9I?list=PL4-CdaRLyja6ErUwwvHldyZ1lrd-wMB_g"
+                            title="(CS500) Sec1_Number Systems 4-11-2021_part2" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
