--- a/subjects/cs500/sections/csSec2.html
+++ b/subjects/cs500/sections/csSec2.html
@@ -59,7 +59,8 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link p-lg-3" aria-current="page" href="../../index.html#diploma_schedule">Diploma
+                        <a class="nav-link p-lg-3" aria-current="page"
+                            href="../../../index.html#diploma_schedule">Diploma
                             Schedule</a>
                     </li>
 
@@ -82,10 +83,17 @@
             <div class="container">
                 <div class="cs500-content pt-4">
                     <h2>PDF</h2>
-                    <a href=""
+                    <a href="https://drive.google.com/file/d/1wghttRbmLACxWjOc_PZe8uXpF-QYZchv/view?usp=share_link"
                         target="_blank">
                         <button type="button" class="btn btn-danger py-3">
-                            Lecture2 PDF
+                            Section 2 PDF
+                            <i class="fa-solid fa-arrow-down-long fa-bounce"></i>
+                        </button>
+                    </a>
+                    <a href="https://drive.google.com/file/d/1ZIUlbWCFKfNquYUvgMd6ZAjMZaBHiIrD/view?usp=share_link"
+                        target="_blank">
+                        <button type="button" class="btn btn-danger py-3 m-3">
+                            Section 2 Handwritten
                             <i class="fa-solid fa-arrow-down-long fa-bounce"></i>
                         </button>
                     </a>
@@ -93,7 +101,35 @@
                         <h2>Video</h2>
 
 
+                        <h1 class="mt-5">
+                            <i class="fa-solid fa-angles-right"></i>Part 1<i class="fa-solid fa-angles-left"></i>
+                        </h1>
 
+                        <iframe width="1349" height="480"
+                            src="https://www.youtube.com/embed/8hsFzLm4nMw?list=PL4-CdaRLyja6ErUwwvHldyZ1lrd-wMB_g"
+                            title="(CS500) Sec2_1_Number Systems_11-11-2-21" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                        <!-- ============================================================= -->
+                        <h1 class="mt-5">
+                            <i class="fa-solid fa-angles-right"></i>Part 2<i class="fa-solid fa-angles-left"></i>
+                        </h1>
+
+                        <iframe width="1349" height="480"
+                            src="https://www.youtube.com/embed/GV_rBXdS7J4?list=PL4-CdaRLyja6ErUwwvHldyZ1lrd-wMB_g"
+                            title="(CS500) Sec2_2 Addition and Subtraction in binary numbers (part1)" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                        <!-- ============================================================= -->
+                        <h1 class="mt-5">
+                            <i class="fa-solid fa-angles-right"></i>Part 3<i class="fa-solid fa-angles-left"></i>
+                        </h1>
+
+                        <iframe width="1349" height="480"
+                            src="https://www.youtube.com/embed/HIYn5MtJK_s?list=PL4-CdaRLyja6ErUwwvHldyZ1lrd-wMB_g"
+                            title="(CS500) Sec2_3 Addition and Subtraction in binary numbers_part2" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
 
                     </div>
                 </div>
