--- a/subjects/cs500/sections/csSec3.html
+++ b/subjects/cs500/sections/csSec3.html
@@ -59,7 +59,8 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link p-lg-3" aria-current="page" href="../../index.html#diploma_schedule">Diploma
+                        <a class="nav-link p-lg-3" aria-current="page"
+                            href="../../../index.html#diploma_schedule">Diploma
                             Schedule</a>
                     </li>
 
@@ -81,9 +82,17 @@
             <div class="container">
                 <div class="cs500-content pt-4">
                     <h2>PDF</h2>
-                    <a href="" target="_blank">
+                    <a href="https://drive.google.com/file/d/1-B78p8uwAKs4Mr2uGVf02stvpeUJurJQ/view?usp=share_link"
+                        target="_blank">
                         <button type="button" class="btn btn-danger py-3">
-                            Lecture3 PDF
+                            Section 3 PDF
+                            <i class="fa-solid fa-arrow-down-long fa-bounce"></i>
+                        </button>
+                    </a>
+                    <a href="https://drive.google.com/file/d/16McC5GavJ9VBbgEBpC98-jHqxUX6RH5j/view?usp=share_link"
+                        target="_blank">
+                        <button type="button" class="btn btn-danger py-3 m-3">
+                            Section 3 Handwritten
                             <i class="fa-solid fa-arrow-down-long fa-bounce"></i>
                         </button>
                     </a>
@@ -91,7 +100,11 @@
                         <h2>Video</h2>
 
 
-
+                        <iframe width="1349" height="480"
+                            src="https://www.youtube.com/embed/tmN7GBpYpj8?list=PL4-CdaRLyja6ErUwwvHldyZ1lrd-wMB_g"
+                            title="(CS500) Sec3. Signed binary numbers (18 -11-2021)" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
 
                     </div>
                 </div>
