--- a/subjects/cs500/sections/csSec4.html
+++ b/subjects/cs500/sections/csSec4.html
@@ -59,7 +59,8 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link p-lg-3" aria-current="page" href="../../index.html#diploma_schedule">Diploma
+                        <a class="nav-link p-lg-3" aria-current="page"
+                            href=".../../../index.html#diploma_schedule">Diploma
                             Schedule</a>
                     </li>
 
@@ -81,10 +82,17 @@
             <div class="container">
                 <div class="cs500-content pt-4">
                     <h2>PDF</h2>
-                    <a href="https://drive.google.com/file/d/1IQcTPE00gSURZEQh2NDf0EkYEGY-X0NV/view?usp=sharing"
+                    <a href="https://drive.google.com/file/d/191yvW43U717TMKHUUNLpKYVJeB1sJG_y/view?usp=share_link"
                         target="_blank">
                         <button type="button" class="btn btn-danger py-3">
-                            Lecture4 PDF
+                            Section 4 & 5 PDF
+                            <i class="fa-solid fa-arrow-down-long fa-bounce"></i>
+                        </button>
+                    </a>
+                    <a href="https://drive.google.com/file/d/1OOE9fFCgmK4i44lsTPfjMiM1HX0e7zNI/view?usp=share_link"
+                        target="_blank">
+                        <button type="button" class="btn btn-danger py-3 m-3">
+                            Section 4 Handwritten
                             <i class="fa-solid fa-arrow-down-long fa-bounce"></i>
                         </button>
                     </a>
