--- a/subjects/cs500/cs500.html
+++ b/subjects/cs500/cs500.html
@@ -59,7 +59,8 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link p-lg-3" aria-current="page" href="#diploma_schedule">Diploma Schedule</a>
+                        <a class="nav-link p-lg-3" aria-current="page" href="../../index.html#diploma_schedule">Diploma
+                            Schedule</a>
                     </li>
 
                     <li class="nav-item">
@@ -129,7 +130,8 @@
 
                 <div class="cs500-content_sections my-5">
                     <div class="row">
-                        <a href="https://www.youtube.com/playlist?list=PL4-CdaRLyja6ErUwwvHldyZ1lrd-wMB_g" target="_blank">
+                        <a href="https://www.youtube.com/playlist?list=PL4-CdaRLyja6ErUwwvHldyZ1lrd-wMB_g"
+                            target="_blank">
                             <button type="button" class="btn  w-100 py-3 mt-3 all_sections-btn">
                                 All Sections
                                 <br>
@@ -169,10 +171,12 @@
                         </div>
                         <div class="col-sm-12 col-lg-6">
                             <a href="sections/csSec4.html">
-                                <button type="button" class="btn w-100 py-3 mt-3">
-                                    Section 4
+                                <button type="button" class="btn w-100 py-3 mt-3 ">
+                                    Section 4 & 5
                                     <br>
-                                    Signed Binary Numbers P2 & Excess Notation
+                                    Excess Notation & Signed 2's complement
+                                    subtraction
+
                                 </button>
                             </a>
                         </div>
