--- a/subjects/cs500/sections/csSec6.html
+++ b/subjects/cs500/sections/csSec6.html
@@ -59,7 +59,8 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link p-lg-3" aria-current="page" href="../../index.html#diploma_schedule">Diploma
+                        <a class="nav-link p-lg-3" aria-current="page"
+                            href="../../../index.html#diploma_schedule">Diploma
                             Schedule</a>
                     </li>
 
